--- a/backend/package.json
+++ b/backend/package.json
@@ -2,21 +2,26 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
-    },
+    "test": "jest --runInBand"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "form-data": "^4.0.5",
     "multer": "^2.0.2",
-    "pdf-parse": "^2.4.5",
+    "natural": "^8.1.0",
+    "pdf-parse": "^1.1.1",
+    "sentiment": "^5.0.2",
+    "stopword": "^3.1.5",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
