--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "wordcloud": "^1.2.3",
     "wordcloud2": "^1.0.0"
   },
   "devDependencies": {
