--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,17 +11,16 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "canvas": "^3.2.0",
-    "chart.js": "^4.5.1",
-    "framer-motion": "^12.23.24",
-    "html2canvas": "^1.4.1",
-    "pdfjs-dist": "^5.4.394",
-    "react": "^19.2.0",
-    "react-chartjs-2": "^5.3.1",
-    "react-dom": "^19.2.0",
+    "chart.js": "4.4.0",
+    "framer-motion": "10.12.7",
+    "react": "18.2.0",
+    "react-chartjs-2": "5.2.0",
+    "react-dom": "18.2.0",
     "react-dropzone": "^14.3.8",
-    "wordcloud": "^1.2.3",
-    "wordcloud2": "^1.0.0"
+    "react-feather": "2.0.10",
+    "react-router-dom": "^6.30.2",
+    "react-router-hash-link": "^2.4.3",
+    "wordcloud": "1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
