--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,30 +12,22 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "4.4.0",
-    "framer-motion": "10.12.7",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "^14.3.8",
     "react-feather": "2.0.10",
     "react-router-dom": "^6.30.2",
-    "react-router-hash-link": "^2.4.3",
     "wordcloud": "1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@tailwindcss/postcss": "^4.1.17",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "vite": "^7.2.4",
-    "vite-plugin-svgr": "^4.5.0"
+    "vite": "^7.2.4"
   }
 }
